--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,5 +6,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: go test -v
+      - run: go test -v ./linkedlists
         working-directory: linkedlists
