--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,4 +6,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: go test -v ./linkedlists ./adjacencymatrix
+      - run: go test -v ./linkedlists ./adjacencymatrix ./arrays
