--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,4 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: '^1.21.1'
       - run: go test -v ./linkedlists ./adjacencymatrix ./arrays
