--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '^1.21.1'
-      - run: go test -v ./linkedlists ./graphs ./arrays ./trees ./general
+      - run: go test -v ./...
